update server for versioning
