# swagger/swagger.yml
@@ -85,11 +85,14 @@ paths:
       operationId: putEntry
       tags:
         - kv
+      consumes:
+        - application/octet-stream
       parameters:
         - name: If-Match
           in: header
           description: when this is an update to an entry, then this field needs to be present
           type: string
+          pattern: "[0-9]*"
         - name: body
           in: body
           required: true
@@ -133,6 +136,15 @@ paths:
           schema:
             $ref: "#/definitions/error"
 
+        410:
+          description: The entry is deleted
+          headers:
+            X-Request-Id:
+              description: The request id this is a response to
+              type: string
+          schema:
+            $ref: '#/definitions/error'
+
         default:
           $ref: "#/responses/errorResponse"
 
@@ -140,6 +152,8 @@ paths:
       operationId: getEntry
       tags:
         - kv
+      produces:
+        - application/octet-stream
       parameters:
         - name: 'If-None-Match'
           in: header
@@ -152,8 +166,20 @@ paths:
             Last-Modified:
               description: The time this entry was last modified
               type: string
-            Content-Type:
-              description: The content type of this entry
+            X-Request-Id:
+              description: The request id this is a response to
+              type: string
+            ETag:
+              description: The version of this entry
+              type: string
+          schema:
+            type: string
+            format: binary
+        304:
+          description: entry was found but not modified
+          headers:
+            Last-Modified:
+              description: The time this entry was last modified
               type: string
             X-Request-Id:
               description: The request id this is a response to
@@ -161,13 +187,6 @@ paths:
             ETag:
               description: The version of this entry
               type: string
-            Content-Length:
-              description: The size of the entry
-              type: integer
-              format: int64
-          schema:
-            type: string
-            format: binary
         404:
           $ref: "#/responses/errorNotFound"
         default:
